test/integration/policies/00-assert.yaml
# Policies - Kyverno
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: tekton-pipelines-verify-image
  namespace: tekton-pipelines

---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: tekton-pipelines-verify-image
  namespace: tekton-pipelines-resolvers
