test/integration/policies/01-assert.yaml
# Policies - Kyverno
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: tekton-pipelines-verify-image
